--- a/content/topics/group-1/presentations/saturday/jrieksta_group_presentation_1.slides.html
+++ b/content/topics/group-1/presentations/saturday/jrieksta_group_presentation_1.slides.html
@@ -13256,7 +13256,7 @@ a.anchor-link {
 <h4 id="Importance-of-Isoprene:--atmospheric-oxidation,-ozone,-and-organic-aerosols"><strong>Importance of Isoprene:</strong>  atmospheric oxidation, ozone, and organic aerosols<a class="anchor-link" href="#Importance-of-Isoprene:--atmospheric-oxidation,-ozone,-and-organic-aerosols">&#182;</a></h4>
 </div>
 </div>
-</div><div class="fragment">
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="Study-area:-Northern-Europe"><strong>Study area:</strong> Northern Europe<a class="anchor-link" href="#Study-area:-Northern-Europe">&#182;</a></h4>
@@ -13268,13 +13268,13 @@ a.anchor-link {
 <h4 id="Methods:"><strong>Methods:</strong><a class="anchor-link" href="#Methods:">&#182;</a></h4><h5 id="-Test-NorESM2-LM-vs-UKESM1-0-LL">-Test NorESM2-LM vs UKESM1-0-LL<a class="anchor-link" href="#-Test-NorESM2-LM-vs-UKESM1-0-LL">&#182;</a></h5><h5 id="-Test-model-data-vs.-observational-data">-Test model data vs. observational data<a class="anchor-link" href="#-Test-model-data-vs.-observational-data">&#182;</a></h5><h6 id="-Potentially-test--modelled-v.s.-satellite-retrieved-isoprene">-Potentially test  modelled v.s. satellite-retrieved isoprene<a class="anchor-link" href="#-Potentially-test--modelled-v.s.-satellite-retrieved-isoprene">&#182;</a></h6>
 </div>
 </div>
-</div></div></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Isoprene-emissions:">Isoprene emissions:<a class="anchor-link" href="#Isoprene-emissions:">&#182;</a></h1>
 </div>
 </div>
-</div><div class="fragment">
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 
 <div class="output_wrapper">
@@ -13295,13 +13295,13 @@ a.anchor-link {
 </div>
 </div>
 
-</div></div></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="-"> <a class="anchor-link" href="#-">&#182;</a></h2>
+<h2 id="Plots">Plots<a class="anchor-link" href="#Plots">&#182;</a></h2>
 </div>
 </div>
-</div><div class="fragment">
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 
 <div class="output_wrapper">
@@ -13328,7 +13328,7 @@ a.anchor-link {
 <h3 id="Next-steps-and-current-issues:">Next steps and current issues:<a class="anchor-link" href="#Next-steps-and-current-issues:">&#182;</a></h3><h4 id="-asses-some-model-statistics-(-Pearson's-r,-dissimilarity-index-(?),-t-test)..">-asses some model statistics ( Pearson's r, dissimilarity index (?), t-test)..<a class="anchor-link" href="#-asses-some-model-statistics-(-Pearson's-r,-dissimilarity-index-(?),-t-test)..">&#182;</a></h4><h4 id="-import-EBAS-data-and-test-the-observation-dats-vs-model-data">-import EBAS data and test the observation dats vs model data<a class="anchor-link" href="#-import-EBAS-data-and-test-the-observation-dats-vs-model-data">&#182;</a></h4>
 </div>
 </div>
-</div></div></section></section>
+</div></section></section>
 </div>
 </div>
 
