fix path in group4 presentations

--- a/content/topics/group-4/presentations/Group4_persentation1_final.slides.html
+++ b/content/topics/group-4/presentations/Group4_persentation1_final.slides.html
@@ -13283,7 +13283,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="slide_bjorn.png" width="2500"></p>
+<p><img src="https://github.com/NordicESMhub/NEGI-Abisko-2019/raw/master/content/topics/group-4/presentations/slide_bjorn.png" width="2500"></p>
 
 </div>
 </div>
@@ -13325,7 +13325,7 @@ a.anchor-link {
 <li>Model data: CMIP6 (CESM2, CanESM5, IPSL-CM6A-LR) and ATRAS</li>
 <li>Obs data: stations at Svalbard, hopefully expand to other locations</li>
 </ul>
-<p><img src="Observation_Station_Svalbard.png" width="500"></p>
+<p><img src="https://github.com/NordicESMhub/NEGI-Abisko-2019/raw/master/content/topics/group-4/presentations/Observation_Station_Svalbard.png" width="500"></p>
 
 </div>
 </div>
@@ -13430,7 +13430,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="Atras_Barrow_frh_85_0pres.jpeg"></p>
+<p><img src="https://github.com/NordicESMhub/NEGI-Abisko-2019/raw/master/content/topics/group-4/presentations/Atras_Barrow_frh_85_0pres.jpeg"></p>
 
 </div>
 </div>
